# float-pigment

./: .gitignore  Cargo.toml  README.md  deprecate.sh  publish-version.sh  publish.sh  rust-toolchain.toml
float-pigment/: Cargo.toml  README.md  float_pigment_css.h  float_pigment_types.h
float-pigment-consistent-bincode/: Cargo.toml  README.md
float-pigment-consistent-bincode/examples/: basic.rs
float-pigment-consistent-bincode/src/: error.rs  internal.rs  io.rs  lib.rs
float-pigment-consistent-bincode/src/config/: int.rs  limit.rs  mod.rs  trailing.rs
float-pigment-consistent-bincode/src/de/: mod.rs  read.rs
float-pigment-consistent-bincode/src/ser/: mod.rs
float-pigment-consistent-bincode/tests/: test.rs
float-pigment-css/: .gitignore  Cargo.toml  README.md  float_pigment_css.h
float-pigment-css-macro/: Cargo.toml  README.md
float-pigment-css-macro/src/: compatibility_check.rs  lib.rs  property_list.rs  resolve_font_size.rs  style_syntax.rs  value_type.rs
float-pigment-css-napi/: .gitignore  .npmignore  Cargo.toml  README.md  README_CN.md  index.d.ts  index.js  package.json  pnpm-lock.yaml  tsconfig.json  type.d.ts
float-pigment-css-napi/__test__/: index.spec.cjs
float-pigment-css-napi/npm/darwin-arm64/: README.md  package.json
float-pigment-css-napi/npm/darwin-x64/: README.md  package.json
float-pigment-css-napi/npm/linux-arm64-gnu/: README.md  package.json
float-pigment-css-napi/npm/linux-arm64-musl/: README.md  package.json
float-pigment-css-napi/npm/linux-x64-gnu/: README.md  package.json
float-pigment-css-napi/npm/linux-x64-musl/: README.md  package.json
float-pigment-css-napi/npm/win32-ia32-msvc/: README.md  package.json
float-pigment-css-napi/npm/win32-x64-msvc/: README.md  package.json
float-pigment-css-napi/prebuilds/darwin-arm64/: node.napi.node
float-pigment-css-napi/prebuilds/darwin-x64/: node.napi.node
float-pigment-css-napi/prebuilds/win32-x32/: node.napi.node
float-pigment-css-napi/prebuilds/win32-x64/: node.napi.node
float-pigment-css-napi/scripts/: build-all.js  build-current.js  build-target.js  postbuild.js
float-pigment-css-napi/src/: lib.rs
float-pigment-css/benches/: parse.rs
float-pigment-css/cbindgen/: cbindgen.toml  extra.rs  extra_struct.h  main.rs
float-pigment-css/cbindgen/examples/: compilation.cpp  inline_style_parsing.cpp  zero_copy_deser.cpp
float-pigment-css/compile_cache/publish/: version.toml
float-pigment-css/compile_cache/publish/enum/: AlignContent.toml  AlignContentType.toml  AlignItems.toml  AlignItemsType.toml  AlignSelf.toml  AlignSelfType.toml  Angle.toml  AngleOrPercentage.toml  AngleType.toml  AnimateableFeature.toml  AnimationDirection.toml  AnimationDirectionItem.toml  AnimationDirectionType.toml  AnimationFillMode.toml  AnimationFillModeItem.toml  AnimationFillModeType.toml  AnimationIterationCount.toml  AnimationIterationCountItem.toml  AnimationIterationCountType.toml  AnimationName.toml  AnimationNameItem.toml  AnimationNameType.toml  AnimationPlayState.toml  AnimationPlayStateItem.toml  AnimationPlayStateType.toml  AspectRatio.toml  AspectRatioType.toml  BackdropFilter.toml  BackdropFilterType.toml  BackgroundAttachment.toml  BackgroundAttachmentItem.toml  BackgroundAttachmentType.toml  BackgroundClip.toml  BackgroundClipItem.toml  BackgroundClipType.toml  BackgroundImage.toml  BackgroundImageGradientItem.toml  BackgroundImageItem.toml  BackgroundImageType.toml  BackgroundOrigin.toml  (+183 more)
float-pigment-css/compile_cache/publish/struct/: Array.toml  AttributeType.toml  ConicGradientItem.toml  FeatureTag.toml  FontFace.toml  FontUrl.toml  InlineRule.toml  KeyFrameRule.toml  KeyFrames.toml  Media.toml  MediaQuery.toml  Rule.toml  Selector.toml  SelectorFragment.toml  StyleSheetV1.toml  (+4 more)
float-pigment-css/examples/: compile_json.rs  index.html  index.js
float-pigment-css/src/: check_trait.rs  ffi.rs  group.rs  length_num.rs  lib.rs  path.rs  property.rs  query.rs  resolve_font_size.rs  typing.rs  typing_stringify.rs
float-pigment-css/src/ffi/: c_ffi.rs  mod.rs  wasm_ffi.rs
float-pigment-css/src/parser/: hooks.rs  mod.rs
float-pigment-css/src/sheet/: borrow.rs  borrow_resource.rs  font_face.rs  keyframes.rs  media.rs  mod.rs  rule.rs  selector.rs  serde_conv.rs  str_store.rs
float-pigment-css/tests/: calc.rs  env.rs  error.rs  font_face.rs  global_values.rs  important.rs  keyframes.rs  media.rs  property.rs  property_value.rs  selector.rs  serde.rs  style_sheet_group.rs  var.rs  warning.rs
float-pigment-css/tests/compatibility/: README.md  main.rs  utils.rs
float-pigment-css/tests/utils/: mod.rs
float-pigment-forest/: .gitignore  Cargo.toml  README.md  build.rs  float_pigment_layout.h
float-pigment-forest-macro/: Cargo.toml  README.md
float-pigment-forest-macro/src/: lib.rs  style_manager.rs
float-pigment-forest/benches/: create_node.rs  layout.rs  operate_node.rs
float-pigment-forest/cbindgen/: cbindgen.toml  extra_header.h  main.rs
float-pigment-forest/src/: env.rs  external.rs  ffi.rs  lib.rs  node.rs  style.rs
float-pigment-forest/src/layout/: layout_impl.rs  mod.rs
float-pigment-forest/tests/: README.md  mod.rs
float-pigment-forest/tests/custom/: cache.rs  css_aspect_ratio.rs  css_border.rs  css_box_sizing.rs  css_display.rs  css_height.rs  css_margin.rs  css_margin_collapse.rs  css_max_height.rs  css_max_width.rs  css_min_height.rs  css_min_width.rs  css_padding.rs  css_position.rs  css_text_align.rs  css_width.rs  imperative_api_check.rs  mod.rs
float-pigment-forest/tests/wpt/: mod.rs
float-pigment-layout/: Cargo.toml  README.md
float-pigment-layout/docs/: grid-zh_CN.md  grid.md  introduction.md  margin-collapse-zh_CN.md  margin-collapse.md
float-pigment-layout/src/: cache.rs  lib.rs  special_positioned.rs  types.rs  unit.rs
float-pigment-layout/src/algo/: flex_box.rs  flow.rs  mod.rs
float-pigment-mlp/: Cargo.toml  README.md
float-pigment-mlp/src/: context.rs  lib.rs  tree.rs  utils.rs
float-pigment-mlp/src/node/: attribute.rs  element.rs  fragment.rs  mod.rs  text.rs
float-pigment/src/: cpp_binding_gen_tools.rs  lib.rs
(+1045 files in other folders)
