[package]
name = "float-pigment-consistent-bincode"
description = "A serialize format designed for `float-pigment-css`."
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["byteorder/std", "serde/std", "serde_bytes/std"]

[dependencies]
byteorder = { version = "1.3.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
serde_bytes = { version = "0.11", default-features = false }
serde_derive = { version = "1.0", default-features = false }

[lints]
workspace = true
