[package]
name = "float-pigment-css-macro"
description = "Helper macros for float-pigment-css."
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[features]
skip_compare_cache = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
rustc-hash = "1.1.0"

[lints]
workspace = true
