[package]
name = "float-pigment-forest"
description = "A node tree implementation for float-pigment-layout."
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "float_pigment_forest"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "float_pigment_layout_cpp_binding_gen_tool"
path = "cbindgen/main.rs"
required-features = ["build-cpp-header"]

[[bench]]
name = "create_node"
harness = false

[[bench]]
name = "operate_node"
harness = false

[[bench]]
name = "layout"
harness = false

[features]
default = []
build-cpp-header = ["cbindgen"]

[dependencies]
float-pigment-css = { workspace = true }
float-pigment-layout = { workspace = true }
euclid = "0.22"
concat-idents = "1.1.3"
cbindgen = { version = "0.19", optional = true }
lru = "0.7.8"
fs_extra = "1.2"
float-pigment-forest-macro = { workspace = true }
bit-vec = "0.6.3"
lazy_static = "1.4"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.5.1"
float-pigment-mlp = { workspace = true }
rustc-hash = "1.1.0"

[target.'cfg(target_os="macos")'.dependencies]
piston_window = "0.128.0"

[lints]
workspace = true
