[package]
name = "float-pigment-layout"
description = "A light-weight layout engine which supports common web layout algorithms."
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "float_pigment_layout"
crate-type = ["rlib"]

[features]
default = []
std = ["style/std"]

[dependencies]
paste = "1.0"
log = "0.4"
euclid = { version = "0.22", default-features = false, features = ["libm"] }
lru = "0.7.8"
num-traits = { version = "0.2", default-features = false }
style = { workspace = true, default-features = false }

[lints]
workspace = true
