[package]
name = "float-pigment-mlp"
description = "Testing utilities for float-pigment. Should not be used by modules of other projects."
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = []
htmlstream = []

[dependencies]
serde = { version = "1.0.166", features = ["derive", "rc"] }
serde_json = "1.0.99"
serde_derive = "1.0.166"
regex = "1.8.4"
htmlstream = "0.1.3"
xmlparser = "0.13.5"
rustc-hash = "1.1.0"

[lints]
workspace = true
